--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.0.2+1
   protobuf: ^3.1.0
+  shared_preferences: ^2.2.2
+  uuid: ^4.2.2
   websocket_universal: ^1.1.1
 
 dev_dependencies:
